# LLMops-platform

./: .gitignore  INTERVIEW_PREP.md  README.md  TODO.md  problem.md  start-windows.bat  start-windows.ps1  stop-windows.bat
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  seed.py
backend/app/core/: crypto.py  redis.py
backend/app/models/: __init__.py  apikey.py  dataset.py  report.py  run.py  trace.py  version.py
backend/app/routers/: config_router.py  dashboard.py  datasets.py  reports.py  runs.py  traces.py  versions.py
backend/app/schemas/: __init__.py  apikey.py  dataset.py  report.py  run.py  trace.py  version.py
backend/app/services/: classifier.py  logger.py  provider_models.py  report_generator.py  runner.py  tracer.py  url_safety.py
backend/app/tasks/: celery_app.py
backend/llmops_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 061964a43cac_add_ondelete_set_null_to_version_fks.py  266ad7992555_init.py  83e0ed1a8158_init.py
demo_data/: multi_turn_cases.json  qa_cases.json  rag_cases.json  tool_calling_cases.json
frontend/: .env.development  .env.production  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  test-setup.ts
frontend/src/__tests__/: components.test.tsx
frontend/src/api/: base.ts  (+1 more)
tests/: test_call_target.py  test_classifier.py  test_provider_models_api.py  test_report_api.py  test_runner.py  test_runs_api.py  test_sse.py  test_target_url.py  test_tracer.py
(+20 files in other folders)
